--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,10 +1,12 @@
 site_name: Art Athlete
 
 theme:
-    name: 'material'
+    name: material
     palette: 
       primary: blue grey
       accent: amber
+    font:
+      text: Merriweather
 
     # Light mode
     - media: "(prefers-color-scheme: light)"
